v7.3.0/_sources/generated/pcdsdevices.ipm.IPM_IPIMB.rst.txt
pcdsdevices.ipm.IPM\_IPIMB
==========================

.. currentmodule:: pcdsdevices.ipm

.. autoclass:: IPM_IPIMB

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - lightpath_summary
          - :class:`~pcdsdevices.signal.SummarySignal`
          - 
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.ipm.IPMMotion`
    
        * - target
          - :class:`~pcdsdevices.ipm.IPMTarget`
          - ``:TARGET``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.ipm.IPMMotion`
    
        * - diode
          - :class:`~pcdsdevices.ipm.IPMDiode`
          - ``:DIODE``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.ipm.IPMMotion`
    
        * - ipimb (FCpt)
          - :class:`~pcdsdevices.ipm.IPIMB`
          - ``{self.prefix_ipimb}``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: calc_lightpath_state
    .. automethod:: channel
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: get_lightpath_state
    .. automethod:: insert
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: remove
    .. automethod:: screen
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: sum
    .. automethod:: summary
    .. automethod:: target_in
    .. automethod:: trigger
    .. automethod:: xpos
    .. automethod:: ypos
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: channels
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: md
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    .. autoattribute:: transmission
    
    